Configures and enables CORS for API access
Explicitly enables CORS support within the Spring Security filter chain. This ensures proper handling of cross-origin requests, allowing frontend applications from different origins to interact with the API.

Adds the `HEAD` method to the allowed CORS methods, enhancing compatibility for clients that use this method to check resource existence or retrieve headers without fetching the full response body.